// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InArticlePuff With an Image matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa gMPYKf"
    data-testid="InArticlePuff - Container"
    style="border-top: 2px solid #13354E;"
  >
    <a
      class="sc-bwzfXH hJnROK"
      href="https://www.thetimes.co.uk/"
    >
      <img
        class="sc-dnqmqq dIDdMH"
        src="https://nuk-tnl-deck-prod-static.s3-eu-west-1.amazonaws.com/uploads/b309b4cc1fe7a2d9a940f93e29701615.jpg"
      />
    </a>
    <div
      class="sc-bZQynM rbPju"
    >
      <div
        class="sc-gzVnrw ERVQt"
      >
        <span
          class="sc-htpNat iMpDKo"
          style="color: rgb(19, 53, 78);"
        >
          INTERACTIVE
        </span>
        <a
          class="sc-bxivhb bHZCrd"
          href="https://www.thetimes.co.uk/"
        >
          Where can I get a Covid vaccine in England?
        </a>
        <span
          class="sc-ifAKCX gOoiHU"
        >
          Enter your postcode in our tool to find your nearest vacination centre
        </span>
      </div>
      <a
        class="sc-htoDjs djguHq"
        data-testid="InArticlePuff - LinkWrapper"
        href="https://www.thetimes.co.uk/"
      >
        <span
          class="sc-EHOje wYTls"
        >
          Read more
        </span>
        <svg
          aria-label="icon-forward-chevron"
          height="18"
          viewBox="42 12 60 120"
          width="8"
        >
          <g
            fill="#BF0000"
          >
            <path
              d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
            />
          </g>
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff Without an image matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa gMPYKf"
    data-testid="InArticlePuff - Container"
    style="border-top: 2px solid #13354E;"
  >
    <div
      class="sc-bZQynM jVKIde"
    >
      <div
        class="sc-gzVnrw ERVQt"
      >
        <span
          class="sc-htpNat fhZNeJ"
          style="color: rgb(19, 53, 78);"
        >
          INTERACTIVE
        </span>
        <a
          class="sc-bxivhb bHZCrd"
          href="https://www.thetimes.co.uk/"
        >
          Where can I get a Covid vaccine in England?
        </a>
        <span
          class="sc-ifAKCX gOoiHU"
        >
          Enter your postcode in our tool to find your nearest vacination centre
        </span>
      </div>
      <a
        class="sc-htoDjs bFrbzf"
        data-testid="InArticlePuff - LinkWrapper"
        href="https://www.thetimes.co.uk/"
      >
        <span
          class="sc-EHOje wYTls"
        >
          Read more
        </span>
        <svg
          aria-label="icon-forward-chevron"
          height="18"
          viewBox="42 12 60 120"
          width="8"
        >
          <g
            fill="#BF0000"
          >
            <path
              d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
            />
          </g>
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
